<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SaViFer Students</string>
    <string name="Welcome_Back">Welcome,</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Sign In</string>
    <string name="Register">Create account</string>
    <string name="Forgot_password">Forgot your password?</string>
    <string name="AppLogo">App Logo</string>
    <string name="Create_an_Account">Create an Account</string>
    <string name="Email">Email</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="Reset_Your_Password">Reset Your Password</string>
    <string name="Send_Reset_Link">Send Reset Password Link</string>
    <string name="Back_to_Login">Back to Login</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="Tabs">Tabs</string>
    <string name="Retrofit_fragment">Posts</string>
    <string name="Chat_fragment">Chat</string>
    <string name="Free_fragment">Reminders</string>
    <string name="Account">Account</string>
    <string name="Settings_fragment">Settings</string>
    <string name="copyright">Made by Enrique F.B.</string>
    <string name="close">Close</string>
    <string name="DescriptionLogin">sign in to continue</string>
    <string name="DescriptionRegister">Don\'t have an account yet?</string>
    <string name="News">News</string>
    <string name="Algemesi_Weather">Algemesi Weather</string>
    <string name="General">General</string>
    <string name="User">User</string>
    <string name="cache">Cache</string>
    <string name="remember_login">Remember login</string>
    <string name="Chat_Color">Chat Color (#RRGGBB)</string>
    <string name="offline">Offline mode</string>
    <string name="color_saved_success">Color saved successfully</string>
    <string name="color_saved_error">Invalid color selected</string>
    <string name="bienvenido_profe">¡Bienvenido, Profesor!</string>
    <string name="bienvenido_admin">¡Bienvenido, Administrador!</string>
    <string name="bienvenido_estud">¡Bienvenido, Estudiante!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="recovery_sent_text">The reset password email has been sent.</string>
    <string name="password_not_match">Passwords don\'t match</string>
    <string name="Remember_me">Remember me</string>
    <string name="Post_Title">Post Title</string>
    <string name="Post_Image_URL">Post Image URL</string>
    <string name="Post_Description">Post Description</string>
    <string name="Add_Post">Add Post</string>
    <string name="Add_a_teacher_to_the_teachers_list">Add a teacher to the list of teachers</string>
    <string name="Email_of_the_teacher">Email of the teacher</string>
    <string name="Add_as_teacher">Add</string>
    <string name="Send">Send</string>
    <string name="Remove_as_teacher">Remove</string>
    <string name="action_logout">Log out</string>
    <string name="Permission_granted">Permission granted</string>
    <string name="Permission_denied">Permission denied</string>
    <string name="Uploaded">Uploaded</string>
    <string name="Failed">Failed: </string>
    <string name="Error">Error: </string>
    <string name="directiva1">Password should be at least 6 characters</string>
    <string name="directiva2">The email address is already in use by another account.</string>
    <string name="directiva3">The email address is badly formatted.</string>
    <string name="directiva4">Something went wrong.</string>
    <string name="directiva5">Email not found.</string>
    <string name="campos_obligatorios">All fields are required</string>
    <string name="Cancelar">Cancel</string>
    <string name="taskDeleted">Task deleted</string>
    <string name="invalid_date">Invalid date or time format.</string>
    <string name="credenciales_incorrectas">Incorrect credentials</string>
    <string name="error_posts">Error loading posts</string>
    <string name="error_network">"Network error:  "</string>
    <string name="error_Clima">Error loading weather</string>
    <string name="nueva_tarea">New Task</string>
    <string name="add">Add</string>
    <string name="anadir">Add</string>
    <string name="titulo">Title</string>
    <string name="descripcion">Description</string>
    <string name="fecha">Date (DD/MM/YYYY)</string>
    <string name="hora">Time (HH:MM)</string>
    <string name="Temperature">Temperature:</string>
    <string name="SensibleTemp">Sensible Temp</string>
    <string name="Description">Description:</string>
    <string name="Precipitation">Precipitation 1h:</string>
    <string name="SaViFerNavTitulo">SaViFer Student App</string>
</resources>
