<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        android:hint="@string/titulo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        android:hint="@string/descripcion" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:hint="@string/fecha" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etHora"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hora"/>
</LinearLayout>