<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".fragments.RegisterFragment">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="316dp"
        android:layout_height="303dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-70dp"
        android:contentDescription="@string/AppLogo"
        android:src="@mipmap/ic_logo_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/allerta"
        android:text="@string/Create_an_Account"
        android:textColor="@color/green"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitle"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Confirm_Password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="12dp"
        android:text="@string/Register"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/tvAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Already_have_an_account"
        android:textColor="@color/orange"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>
