<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".fragments.LoginFragment">


    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/allerta"
        android:text="@string/Welcome_Back"
        android:textColor="@color/blue"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/allerta"
        android:text="@string/DescriptionLogin"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Username"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#A5A4A4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginDescription"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:password="true"
        android:textColor="#A5A4A4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="12dp"
        android:text="@string/Login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/registerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/DescriptionRegister"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_border_green"
        android:elevation="0dp"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="12dp"
        android:stateListAnimator="@null"
        android:text="@string/Register"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerDescription"
        app:layout_constraintWidth_percent="0.9" />


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Forgot_password"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/checkBoxRememberMe"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="375dp"
        android:layout_height="283dp"
        android:layout_marginBottom="-100dp"
        android:contentDescription="App Logo"
        android:src="@mipmap/ic_logo_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/Remember_me"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
