<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etPostTitle"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_border_textfield"
        android:hint="@string/Post_Title"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPostImatgeURL"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_border_textfield"
        android:gravity="top|start"
        android:hint="@string/Post_Image_URL"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPostTitle" />

    <EditText
        android:id="@+id/etPostDescription"
        android:layout_width="320dp"
        android:layout_height="380dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_border_textfield"
        android:hint="@string/Post_Description"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/btnAddPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPostImatgeURL" />

    <Button
        android:id="@+id/btnAddPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Add_Post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPostDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
