<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/weatherTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Algemesi_Weather"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewLine2"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/viewLine2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/postsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/News"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewLine"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/fabAddPost"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/circular_button_background"
        android:contentDescription="Add Post"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toTopOf="@+id/viewLine"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFriends"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/viewLine"
        app:layout_constraintBottom_toBottomOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="331dp"
        android:layout_height="94dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_border"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/climaImatge"
            android:layout_width="75dp"
            android:layout_height="74dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Temperature"
                    android:textStyle="bold"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/textViewTemperatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="0.0°C"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SensibleTemp"
                    android:textStyle="bold"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/textViewTemperaturaSensible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="0.0°C"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Description"
                    android:textStyle="bold"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/textViewDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="Clear"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Precipitation"
                    android:textStyle="bold"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/textViewPrecipitacion1h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="0.0mm"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
